--- a/style.css
+++ b/style.css
@@ -1,3 +1,89 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-background: #000;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main {
+    width: 1124px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    padding: 30px;
+    background: lightgray;
+}
+.text-area {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    background: #fff3f3;
+}
+.keyboard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+button {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    font-size: 30px;
+    font-weight: 900;
+    background: #fff3f3;
+    box-shadow: 2px 2px 2px #999;
+    cursor: pointer;
+}
+
+button::before {
+    content: var(--before-content);
+}
+
+button:hover {
+    background-color: #dcdddc;
+    /* font-size: 35px; */
+}
+
+button:active {
+    background-color: #8b8c8b;
+    box-shadow: 2px 2px 2px #666;
+    transform: translate(1px, 1px);
+}
+.active {
+  background-color: #8b8c8b;
+  box-shadow: 2px 2px 2px #666;
+  transform: translate(1px, 1px);
+}
+
+#Backspace {
+    width: 120px;
+    font-size: 15px;
+}
+
+/* #del {
+    width: 75px;
+} */
+#Tab {
+    width: 75px;
+    /* grid-column: 14 / span 15; */
 }
