--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ body {
     align-items: center;
 }
 h1 {
-  margin-bottom: 20px;
-  font-size: 2rem;
+    margin-bottom: 20px;
+    font-size: 2rem;
+}
+p {
+    margin-bottom: 10px;
+    font-size: 1rem;
 }
 .main {
     max-width: 1124px;
@@ -25,15 +29,17 @@ h1 {
     background: lightgray;
 }
 .text-area {
-    width: 100%;
-    height: 50px;
+    /* width === textArea.cols in js */
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 40px;
     background: #fff3f3;
     border-radius: 5px;
+    padding: 10px;
+    caret-color: red;
 }
+
 .keyboard {
     display: flex;
     flex-wrap: wrap;
@@ -52,9 +58,9 @@ button {
     border: none;
     outline: none;
     font-size: 30px;
-    font-weight: 900;
+    font-weight: 500;
     background: #fff3f3;
-    box-shadow: 2px 2px 2px #999;
+    box-shadow: 3px 3px 3px #999;
     cursor: pointer;
 }
 
@@ -68,49 +74,62 @@ button:hover {
 }
 
 button:active {
-    background-color: #8b8c8b;
-    box-shadow: 2px 2px 2px #666;
+    background-color: #dcdddc;
+    box-shadow: 1px 1px 1px #666;
     transform: translate(1px, 1px);
 }
+
 .active {
-    background-color: #8b8c8b;
-    box-shadow: 2px 2px 2px #666;
+    background-color: #dcdddc;
+    box-shadow: 1px 1px 1px #666;
     transform: translate(1px, 1px);
 }
 
 #Backspace,
 #ShiftLeft,
-#ShiftRight {
-    width: 120px;
-    font-size: 15px;
-}
-
+#ShiftRight,
 #ControlLeft,
-#Win,
 #AltLeft,
 #AltRight,
 #ControlRight,
 #Tab,
-#Delete {
-    width: 70px;
+#Delete,
+#Win,
+#Space,
+#CapsLock,
+#Enter {
     font-size: 15px;
+    font-weight: 800;
+}
+
+#Backspace {
+    width: 120px;
+}
+#ShiftLeft {
+    width: 160px;
+}
+
+#ControlLeft,
+#AltLeft,
+#AltRight,
+#ControlRight,
+#Tab,
+#Delete,
+#ShiftRight {
+    width: 70px;
 }
 
 #Space {
     width: 450px;
-    font-size: 15px;
 }
 
 #CapsLock {
     width: 100px;
-    font-size: 15px;
 }
 
 #Enter {
     width: 140px;
-    font-size: 15px;
 }
-
 
 .greenRound,
 .orangeRound {
@@ -123,9 +142,11 @@ button:active {
     background-color: rgb(207, 207, 207);
 }
 
-#ShiftLeft:active .greenRound {
+#ShiftLeft:active .greenRound,
+.green {
     background-color: rgb(5, 177, 5);
 }
-#CapsLock:active .orangeRound {
-    background-color: rgb(237, 97, 47);
+#CapsLock:active .orangeRound,
+.orange {
+    background-color: rgb(252, 96, 39);
 }
