--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ p {
     transform: translate(1px, 1px);
 }
 #ArrowUp,#ArrowLeft,#ArrowDown,#ArrowRight {
-  background-color: #000;
   color: #fff;
 }
 
@@ -113,7 +112,6 @@ p {
 #Space,
 #CapsLock,
 #Enter {
-    background-color: #a6a29a;
     font-size: 15px;
     font-weight: 800;
 }
@@ -136,7 +134,7 @@ p {
 }
 
 #Space {
-    background-color: #f8a64f;
+  background: #d49500 !important;
     width: 450px;
 }
 
@@ -145,7 +143,6 @@ p {
 }
 
 #Enter {
-  background-color: #f8a64f;
     width: 140px;
 }
 
@@ -157,13 +154,9 @@ p {
     top: 10px;
     right: 10px;
     border-radius: 50%;
-    background-color: rgb(207, 207, 207);
+    background-color: #cfcfcf;
 }
 
-#ShiftLeft:active .greenRound,
-.green {
-    background-color: rgb(5, 177, 5);
-}
 #CapsLock:active .orangeRound,
 .orange {
     background-color: rgb(252, 96, 39);
